--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,13 +32,7 @@
 
 <body>
   <!-- Top Nav Bar (fixed) -->
-  <nav class="top_nav">
-    <span>
-      <a class="title" href="/"><img src="/images/NoodleExpressLogoText.png"></a>
-    </span>
-    <a href="/mypage"><span class="contact">My Order</span></a>
-  </nav>
-
+  <%- include('partials/_header') %>
     <!-- HEADER -->
     <header class="main">
       <div class="welcome">
