--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,5 +4,9 @@
   <span>
     <a href="/"><img class="title" src="/images/NoodleExpressLogoText.png"></a>
   </span>
-  <a href="/mypage"><span class="contact">My Order!</span></a>
+  <div>
+    <a href="/order"><span class="contact">MENU</span></a>
+    <a href="/mypage"><span class="contact">MY ORDER</span></a>
+    <a href="/dashboard"><span class="contact">DASHBOARD</span></a>
+  </div>
 </nav>
