--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -94,6 +94,7 @@
                     </tr>
                   </tbody>
                 </table>
+                <img id="dancing_ramen" src="images/preparing_meal.gif">
               </div>
               <div class="cardRighttable-responsive w-50">
                 <table class="table">
