change html color

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,11 @@
 //   min-height: 100vh;
 //   background: rgba(254, 228, 152, 0.695);
 // }
+
+html {
+  background-color: #f4f1ec;
+}
+
 body {
   color: #545149;
   background-color: #f4f1ec;
