--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,8 +1,8 @@
 // See: https://sass-lang.com/
 
-// html {
-//   box-sizing: border-box;
-// }
+html {
+  box-sizing: border-box;
+}
 // *, *:before, *:after {
 //   box-sizing: inherit;
 // }
