--- a/styles/my_page.scss
+++ b/styles/my_page.scss
@@ -1,4 +1,6 @@
-
+html {
+  background-color: #f4f1ec;
+}
 .mainContainer {
   margin: 0 !important;
   background-color: #f4f1ec;
@@ -29,7 +31,7 @@
 }
 
 .pastOrder {
-  background-color: #f4f1ec;
+  background-color: #f2ba4d;
   border-radius: 15px;
   border: 2px solid #f2ba4d;
 }
@@ -45,7 +47,9 @@
   height: fit-content;
   background-color: #f4f1ec;
   // border: 2px solid #f2ba4d;
-  border-radius: 15px;
+  // border-radius: 15px;
+  border-bottom-left-radius: 15px !important;
+  border-bottom-right-radius: 15px !important;
 
 
  }
