--- a/views/order.ejs
+++ b/views/order.ejs
@@ -66,7 +66,9 @@
             <tfoot id="cartRowsSum">
             </tfoot>
           </table>
-          <button type="button" class="btn btn-primary w-100 order_now_button">Order Now</button>
+          <a href="/mypage" class="order_now_button_link">
+            <button type="button" class="btn btn-primary w-100 order_now_button">Order Now</button>
+          </a>
         </div>
       </div>
     </section>
