edited my page style

--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -32,6 +32,7 @@
               <div class="cardLeft w-50">
                 <table class="table table-borderless">
                   <h5>Details</h5>
+                  <hr>
                   <tbody>
                     <tr>
                       <th scope="col">Date</th>
@@ -255,5 +256,16 @@
     </div>
 
 </body>
+<footer>
+  <div>
+    <p>CONTACT</p>
+    <p>ADDRESS</p>
+    <p>FAQ</p>
+    <p>ABOUT US</p>
+  </div>
+  <div>
+    <p>Noodles Express</p>
+  </div>
+</footer>
 
 </html>
