changed header and changed background color of dashboard

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,5 +8,6 @@
     <a href="/order"><span class="contact">MENU</span></a>
     <a href="/mypage"><span class="contact">MY ORDER</span></a>
     <a href="/dashboard"><span class="contact">DASHBOARD</span></a>
+    <a href="/dashboard/add_menu"><span class="contact">ADMIN</span></a>
   </div>
 </nav>
