--- a/views/order.ejs
+++ b/views/order.ejs
@@ -66,8 +66,8 @@
             <tfoot id="cartRowsSum">
             </tfoot>
           </table>
-          <a href="/mypage" class="order_now_button_link">
-            <button type="button" class="btn btn-primary w-100 order_now_button">Order Now</button>
+          <a href="/mypage" class="order_now_button_link" id="order_now_button_link">
+            <button type="button" class="btn btn-primary w-100 order_now_button" id="order_now_button">Order Now</button>
           </a>
         </div>
       </div>
