--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -26,7 +26,7 @@
         <h2 class="currentOrderTitle w-25">Current Orders</h2>
         <div class="currentOrderCardContainer flex-column w-75">
           <% if (currentOrder)  {%>
-            <h2 class="m-4" id="currentOrderMsg">We have received your order!</h2>
+            <h2 class="m-4" id="currentOrderMsg"><img id="dancing_ramen_top" src="images/preparing_meal.gif">We have received your order!<img id="dancing_ramen_top" src="images/preparing_meal.gif"></h2>
           <% for(let ctOrder in currentOrder) { %>
           <div class="currentOrder card mb-5">
             <h5 class="card-header">Order: #<%= currentOrder[ctOrder]['order_id'] %></h5>
